dev.log

> med-escolha-v2@0.1.0 dev
> next dev

▲ Next.js 16.2.7 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.100.49:3000
- Environments: .env.local
✓ Ready in 915ms

Error: Route "/especialidades/[id]" used `params.id`. `params` is a Promise and must be unwrapped with `await` or `React.use()` before accessing its properties. Learn more: https://nextjs.org/docs/messages/sync-dynamic-apis
    at EspecialidadePage (app\especialidades\[id]\page.tsx:48:30)
  46 |
  47 | export default async function EspecialidadePage({ params }: { params: { id: string } }) {
> 48 |   const id = parseInt(params.id)
     |                              ^
  49 |   if (isNaN(id) || id < 1 || id > 55) return notFound()
  50 |
  51 |   const descriptions = (descriptionsData as any).specialties as Array<{
Error: Route "/especialidades/[id]" used `params.id`. `params` is a Promise and must be unwrapped with `await` or `React.use()` before accessing its properties. Learn more: https://nextjs.org/docs/messages/sync-dynamic-apis
    at <unknown> (app\especialidades\[id]\page.tsx:39:61)
    at Array.find (<anonymous>)
    at Module.generateMetadata (app\especialidades\[id]\page.tsx:39:26)
  37 | ...tion generateMetadata({ params }: { params: { id: string } }) {
  38 | ...ons = (descriptionsData as any).specialties as Array<{ id: number; nome: string; descri...
> 39 | ...iptions.find(x => x.id === parseInt(params.id))
     |                                               ^
  40 | ...{}
  41 | ...
  42 | ...ome} | Med Escolha`,
 GET /especialidades/5 404 in 2.0s (next.js: 1649ms, generate-params: 561ms, application-code: 371ms)
 GET /especialidades 200 in 1526ms (next.js: 366ms, application-code: 1160ms)
Error: Route "/especialidades/[id]" used `params.id`. `params` is a Promise and must be unwrapped with `await` or `React.use()` before accessing its properties. Learn more: https://nextjs.org/docs/messages/sync-dynamic-apis
    at EspecialidadePage (app\especialidades\[id]\page.tsx:48:30)
  46 |
  47 | export default async function EspecialidadePage({ params }: { params: { id: string } }) {
> 48 |   const id = parseInt(params.id)
     |                              ^
  49 |   if (isNaN(id) || id < 1 || id > 55) return notFound()
  50 |
  51 |   const descriptions = (descriptionsData as any).specialties as Array<{
Error: Route "/especialidades/[id]" used `params.id`. `params` is a Promise and must be unwrapped with `await` or `React.use()` before accessing its properties. Learn more: https://nextjs.org/docs/messages/sync-dynamic-apis
    at <unknown> (app\especialidades\[id]\page.tsx:39:61)
    at Array.find (<anonymous>)
    at Module.generateMetadata (app\especialidades\[id]\page.tsx:39:26)
  37 | ...tion generateMetadata({ params }: { params: { id: string } }) {
  38 | ...ons = (descriptionsData as any).specialties as Array<{ id: number; nome: string; descri...
> 39 | ...iptions.find(x => x.id === parseInt(params.id))
     |                                               ^
  40 | ...{}
  41 | ...
  42 | ...ome} | Med Escolha`,
 GET /especialidades/1 200 in 101ms (next.js: 16ms, generate-params: 9ms, application-code: 85ms)
✓ Compiled in 66ms
✓ Compiled in 80ms
Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection: Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection:  Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection: Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection:  Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection: Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection:  Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection: Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection:  Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection: Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection:  Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection: Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
⨯ unhandledRejection:  Error: Both middleware file "./middleware.ts" and proxy file "./proxy.ts" are detected. Please use "./proxy.ts" only. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
    at ignore-listed frames
SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
[?25h
